--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -120,9 +120,12 @@
   cursor: pointer;
   font-size: 1.4rem;
   transition: ease-in 300ms;
-
-  @include breakpoint(medium) {
-    margin: 0 2rem;
+  width: fit-content;
+  justify-self: center;
+  margin-right: 1rem;
+  @include breakpoint(small) {
+    margin-right: 0rem;
+    font-size: 1.6rem;
   }
 }
 
